[workspace]
resolver = "2"
members = [
    "usboverssh-core",
    "usboverssh-cli",
]

[workspace.package]
version = "1.0.0"
authors = ["ImKKingshuk <https://github.com/ImKKingshuk>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/ImKKingshuk/USBoverSSH"
keywords = ["usb", "ssh", "remote", "usbip", "device"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# USB/IP Protocol
nusb = "0.1"

# SSH
russh = "0.48"
russh-keys = "0.48"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
regex = "1.11"
colored = "2.2"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.4"
whoami = "1.5"
hostname = "0.4"

# Platform-specific deps are defined in individual crates
libc = "0.2"
nix = { version = "0.29", features = ["fs", "ioctl", "process", "signal"] }
windows = { version = "0.59", features = ["Win32_Devices_Usb", "Win32_System_IO"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
