[package]
name = "usboverssh-core"
description = "Core library for USB over SSH - USB/IP protocol implementation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
nusb = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
whoami = { workspace = true }
hostname = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
