[package]
name = "usboverssh_headless_cli"
description = "USBoverSSH Headless CLI - Connect USB devices securely over SSH"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "usboverssh-cli"
path = "src/main.rs"

[dependencies]
usboverssh = { path = "../usboverssh" }

tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
